@@ -1,5 +1,12 @@
 2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
+	Fix compiler warnings from previous patch.
+	* libgnome/gnome-program.c: (gnome_program_locate_file): Remove
+	unused variable.
+
+2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* configure.in: Add --enable-esd switch. Patch from
 	Leonardo Boshell. Closes bug #310972.
 
